--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vanillabox/vanillabox.css" type="text/css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vanillabox/vanillabox.css" type="text/css">
 
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" type="text/css">
 
 
